test/corpus/basic.txt
================================================================================
Simple flat segments
================================================================================
First segment
Second segment
Third segment
--------------------------------------------------------------------------------

(document
  (segment
    (content))
  (segment
    (content))
  (segment
    (content)))

================================================================================
Nested segments - one level
================================================================================
Parent
  Child A
  Child B
--------------------------------------------------------------------------------

(document
  (segment
    (content)
    (segment
      (content))
    (segment
      (content))))

================================================================================
Multi-level nesting
================================================================================
Level 0
  Level 1
    Level 2
Back to level 0
--------------------------------------------------------------------------------

(document
  (segment
    (content)
    (segment
      (content)
      (segment
        (content))))
  (segment
    (content)))

================================================================================
Mixed nesting
================================================================================
A
  A1
  A2
    A2a
B
  B1
C
--------------------------------------------------------------------------------

(document
  (segment
    (content)
    (segment
      (content))
    (segment
      (content)
      (segment
        (content))))
  (segment
    (content)
    (segment
      (content)))
  (segment
    (content)))

================================================================================
Dedent to sibling (1 level)
================================================================================
Parent
  Child A
    Grandchild A1
    Grandchild A2
  Child B
    Grandchild B1
--------------------------------------------------------------------------------

(document
  (segment
    (content)
    (segment
      (content)
      (segment
        (content))
      (segment
        (content)))
    (segment
      (content)
      (segment
        (content)))))

================================================================================
Irregular indentation (code block)
================================================================================
    Parent
      Code header
          deep line 1
        deep line 2
      After code
      More content
--------------------------------------------------------------------------------

(document
  (segment
    (content)
    (segment
      (content)
      (segment
        (content)))
    (segment
      (content))
    (segment
      (content))
    (segment
      (content))))

================================================================================
Blank lines between segments
================================================================================
A

B
  C

  D
--------------------------------------------------------------------------------

(document
  (segment
    (content))
  (segment
    (content)
    (segment
      (content))
    (segment
      (content))))

================================================================================
Trailing blank lines
================================================================================
A
  B


--------------------------------------------------------------------------------

(document
  (segment
    (content)
    (segment
      (content))))

================================================================================
First line indented
================================================================================
  A
  B
C
--------------------------------------------------------------------------------

(document
  (segment
    (content)
    (segment
      (content)))
  (segment
    (content)))

================================================================================
Dedent with blank lines and trailing spaces
================================================================================
Parent
  Child A
    aaaa

    sfdsa

    sdfafsafa

  Child B
  Child C
--------------------------------------------------------------------------------

(document
  (segment
    (content)
    (segment
      (content)
      (segment
        (content))
      (segment
        (content))
      (segment
        (content)))
    (segment
      (content))
    (segment
      (content))))
